--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "@smastrom/react-email-autocomplete",
-   "version": "1.2.0",
+   "name": "react-email-autocomplete",
+   "version": "1.2.1",
    "private": false,
    "homepage": "https://react-email-autocomplete.netlify.app",
    "bugs": {
@@ -22,7 +22,7 @@
    ],
    "repository": {
       "type": "git",
-      "url": "https://github.com/smastrom/react-email-autocomplete"
+      "url": "https://github.com/iDNA-Digital-Agency/react-email-autocomplete"
    },
    "license": "MIT",
    "author": "Simone Mastromattei <smastrom@proton.me>",
